# NE_Serial

./: .gitignore  CMakeLists.txt  README.md
include/: NEInit.h  NERobotPosition.h  NESerial.h  RmCRC.h
src/: NERobotPosition.cpp  NESerial.cpp  RmCRC.cpp
